syntax = "proto3";

package x.userlogger;
option go_package = "github.com/5vnetwork/vx-core/app/userlogger";

message UserLogMessage {
  oneof message {
    RouteMessage route_message = 1;
    ErrorMessage error_message = 2;
    SessionError session_error = 3;
    RejectMessage reject_message = 4;
    Fallback fallback = 5;
  }
}
message RouteMessage {
  string dst = 1;
  string tag = 2;
  int64 timestamp = 3;
  string app_id = 4;
  // when dst is ip, this field contains
  // sniffed domain
  string sniff_domain = 5;
  uint32 sid = 6;
  string ip_to_domain = 7;
  string selector_tag = 8;
  string matched_rule = 9;
  string inbound_tag = 10;
  string network = 11;
  string sniff_protofol = 12;
  string source = 13;
}

message ErrorMessage {
  string message = 1;
  int64 timestamp = 2;
}

message Fallback {
  uint32 sid = 1;
  // the handler that eventually handle this session
  string tag = 2;
}

message SessionError {
  string message = 1;
  // int64 timestamp = 2;
  uint32 sid = 3;
  uint32 up = 4;
  uint32 down = 5;
  // if the session dst is ip, this is the dns server 
  // handles the dns query that resolves to the ip
  string dns = 6;
  // TODO: domain geo tags?
  // reason, analysis, route name? 
}

message RejectMessage {
  string dst = 1;
  int64 timestamp = 2;
  string domain = 3;
  string reason = 4;
  string app_id = 5;
}