syntax = "proto3";

package x.common.geo;
option go_package = "github.com/5vnetwork/vx-core/common/geo";

message Domain {
  // Type of domain value.
  enum Type {
    // The value is used as is. "keyword"
    Plain = 0;
    // The value is used as a regular expression.
    Regex = 1;
    // The value is a root domain.
    RootDomain = 2;
    // The value is a domain.
    Full = 3;
  }

  // Domain matching type.
  Type type = 1;

  // Domain value.
  string value = 2;

  message Attribute {
    string key = 1;

    oneof typed_value {
      bool bool_value = 2;
      int64 int_value = 3;
    }
  }

  // Attributes of this domain. May be used for filtering.
  repeated Attribute attribute = 3;
}

// IP for routing decision, in CIDR form.
message CIDR {
  // IP address, should be either 4 or 16 bytes.
  bytes ip = 1;

  // Number of leading ones in the network mask.
  uint32 prefix = 2;
}

// each geoIP corresponding to a country in geoip.dat
message GeoIP {
  // used
  string country_code = 1;
  repeated CIDR cidr = 2;

  // resource_hash instruct simplified config converter to load domain from geo
  // file.
  bytes resource_hash = 4;
  // not used
  string code = 5;
  string file_path = 68000;
  bool inverse_match = 3;
}

message GeoIPList { repeated GeoIP entry = 1; }

// each file in data is a geosite
message GeoSite {
  string country_code = 1;
  repeated Domain domain = 2;

  // resource_hash instruct simplified config converter to load domain from geo
  // file. not used currently.
  bytes resource_hash = 3;
  // code is same as country_code. used in config.
  string code = 4;
  // used in config.
  string file_path = 68000;
}

message GeoSiteList { repeated GeoSite entry = 1; }

message CIDRList { repeated CIDR cidrs = 1; }